k8s/app/frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: joke-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080  # Isso expõe o serviço na porta 30080 de todos os nós do cluster
  type: NodePort
