k8s/app/grafana-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-agent-otlp
  namespace: observability
  labels:
    app.kubernetes.io/instance: grafana-agent
    app.kubernetes.io/name: grafana-agent
spec:
  ports:
  - name: otlp-grpc
    port: 4317
    protocol: TCP
    targetPort: 4317
  - name: otlp-http
    port: 4318
    protocol: TCP
    targetPort: 4318
  selector:
    app.kubernetes.io/instance: grafana-agent
    app.kubernetes.io/name: grafana-agent
  type: ClusterIP
