k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joke-app-main-ingress  # Alterado para evitar conflito
  namespace: joke-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Opcional, se você configurar cert-manager
spec:
  tls:  # Opcional, se você configurar cert-manager
  - hosts:
    - www.labk3s.online
    secretName: labk3s-tls
  rules:
  - host: www.labk3s.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
