k8s/app/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-joke-app-to-observability
  namespace: observability
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: joke-app
  podSelector: {}
  policyTypes:
  - Ingress
