k8s/app/temp-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: joke-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: joke-app
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
